Final style with name of the user

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
   "NAV_TITLE" : "Sourcing",
   "NAV_TITLE_BOLD" : "Show",
+  "NAV_TESTCASE" : "Test Case",
+  "NAV_CONTRIBUTOR" : "Case contributor",
   "PRODUCTLIST_TITLE" : "Product List"
 }
